--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "nodemon": "nodemon index.js",
     "test": "jest"
   },
   "jest": {
@@ -20,5 +21,8 @@
     "jest": "^26.6.3",
     "mongoose": "^5.11.9",
     "telegraf": "^3.38.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
